# psyai-gestalt-supervisor

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  Dockerfile  PLAN.md  PLAN2.md  PLAN3.md  PRODUCT.md  RAGAS_RESULTS.md  README.md  docker-compose.yml  google_embedding.md  main.py  pyproject.toml
agentic-data/guide/docs/superpowers/plans/: 2026-04-23-text-ingest-workflow.md
app/: config.py  main.py  vector_store.py
app/api/: admin.py  chat.py
app/bot/: handlers.py
app/ingest/: __init__.py  _common.py  smart.py  standard.py
app/ragas/: __init__.py  eval.py  questions.py
app/services/: cache.py  rag.py  ragas_eval.py  search.py
tests/: conftest.py  test_admin_ingest.py  test_search.py  test_vector_store.py
